[gd_scene load_steps=2 format=3 uid="uid://b7e8h5qm7y0ca"]

[ext_resource type="Script" uid="uid://dhiqdur5jrr2o" path="res://CardAlbum/scripts/CardAlbum.gd" id="1_album"]

[node name="CardAlbum" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_album")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 76.0
offset_top = 63.0
offset_right = -70.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Card Album"
horizontal_alignment = 1

[node name="CardContainer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CardGrid" type="GridContainer" parent="VBoxContainer/CardContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 5

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu"

[node name="prev_button" type="Button" parent="."]
layout_mode = 2
offset_left = 4.0
offset_top = 275.0
offset_right = 77.0
offset_bottom = 347.0
text = "Previous"

[node name="page_label" type="Label" parent="."]
layout_mode = 2
offset_left = 546.0
offset_top = 38.0
offset_right = 616.0
offset_bottom = 58.0
size_flags_horizontal = 3
text = "Page 1 / 1"
horizontal_alignment = 1

[node name="next_button" type="Button" parent="."]
layout_mode = 2
offset_left = 1086.0
offset_top = 258.0
offset_right = 1147.0
offset_bottom = 326.0
text = "Next"
